# Dictionary-project

./: .coverage  .gitignore  Notebook.ipynb  README.md  profile.prof2  pyproject.toml
data/works/: text-check
src/master_analyzer/: __init__.py  cli.py  dictionary.py  similarity.py  statistics.py  text_processing.py
tests/: test_dictionary.py  test_statistics.py  test_test_similarity.py  test_text_processing.py  text_test_processing.py
